--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,3 +105,34 @@ a {
     color-scheme: dark;
   }
 }
+
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  margin-top: 1px;
+  display: block;
+  z-index: 99999 !important;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 370px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: blue; color: white}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
